...
        android:contentDescription="@string/title"
        app:layout_constraintStart_toStartOf="@+id/myprof_pic"
        app:layout_constraintTop_toBottomOf="@+id/divider7"
        app:srcCompat="@drawable/ic_code_black_18dp" />

    <EditText
        android:id="@+id/editProficiency"
        android:layout_width="@dimen/editwidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/addprof"
        android:ems="10"
        android:gravity="start|top"
...
